Initial Int Maps Update